[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'mxxn'
description = 'The MXXN web application framework'
version = '0.1.0'
license = {text = 'AGPLv3'}

dependencies = [
	'python_version>"3.10"',
	'falcon',
	'uvicorn[standard]',
	'jsonschema',
	'jinja2',
	'alembic',
	'aiosqlite'
]

[project.scripts]
mxxr = 'mxxn.cli:main'

[project.optional-dependencies]
develop = [
	'coverage[toml]',
	'pytest',
	'pytest-cov',
	'mypy',
	'flake8',
	'flake8-docstrings',
	'Flake8-pyproject',
	'sphinx',
	'sphinx-rtd-theme',
	'sphinxcontrib-httpdomain',
	'types-jsonschema',
	'types-setuptools',
	'nodeenv',
	'sqlalchemy[mypy]',
	'copier',
]

[tool.setuptools.packages]
find = {}

[tool.coverage]
omit = [
	'mxxn/alembic/*',
	'mxxn/cli.py'
]

[tool.flake8]
exclude = [
	'.git',
	'__pycache__',
	'build',
	'dist',
	'.undodir',
	'mxxn/alembic',
	'mxxn/models/versions'
]

[tool.mypy]
files = 'mxxn'
disallow_untyped_defs = true
plugins = 'sqlalchemy.ext.mypy.plugin'
exclude = 'mxxn/models/versions/*|mxxn/alembic/*'

[[tool.mypy.overrides]]
module = 'falcon.*'
ignore_missing_imports = true
