[metadata]
name = mxxn
version = 0.1.0
descriptions = mixxin web application framework
author = lluar
author_email = lluar@ccodein.org
url = www.ccodein.org
license = AGPLv3
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8

install_requires =
    falcon
	uvicorn[standard]
	jsonschema
	jinja2
	alembic
	aiosqlite

[options.extras_require]
develop =
	pytest
	mypy
	flake8
	flake8-docstrings
	sphinx
	sphinx-rtd-theme
	types-jsonschema
	types-setuptools
	nodeenv
	sqlalchemy[mypy]
	copier==6.0.0a9

[options.entry_points]
console_scripts =
    mxxr = mxxn.cli:main

[tool:pytest]
asyncio_mode = auto

[flake8]
exclude =
	.git
	__pycache__
	build
	dist
	.undodir
	mxxn/alembic
	mxxn/models/versions

[mypy]
files = mxxn
disallow_untyped_defs = True
plugins = sqlalchemy.ext.mypy.plugin
exclude = mxxn/models/versions/*|mxxn/alembic/*

[mypy-falcon.*]
ignore_missing_imports = True
