[metadata]
name = mxxn
version = 0.1.0
descriptions = mixxin web application framework
author = lluar
author_email = lluar@ccodein.org
url = www.ccodein.org
license = AGPLv3
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8

install_requires =
    falcon
	uvicorn[standard]
	jsonschema
	jinja2
	alembic
	aiosqlite

[options.extras_require]
develop =
	pytest
	pytest-cov
	mypy
	flake8
	flake8-docstrings
	sphinx
	sphinx-rtd-theme
	sphinxcontrib-httpdomain
	types-jsonschema
	types-setuptools
	nodeenv
	sqlalchemy[mypy]
	copier==6.0.0a9

[options.entry_points]
console_scripts =
    mxxr = mxxn.cli:main

[flake8]
exclude =
	.git
	__pycache__
	build
	dist
	.undodir
	mxxn/alembic
	mxxn/models/versions

[tool:pytest]
pythonpath = .
filterwarnings =
    ignore:.*There is no current event loop:DeprecationWarning

[coverage:run]
omit =
	mxxn/alembic/*
	mxxn/cli.py

[mypy]
files = mxxn
disallow_untyped_defs = True
plugins = sqlalchemy.ext.mypy.plugin
exclude = mxxn/models/versions/*|mxxn/alembic/*

[mypy-falcon.*]
ignore_missing_imports = True
